--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="ServicoTest" android:label="ServicoTest"
+        <service android:name=".ServicoTest" android:label="ServicoTest"
             android:exported="false">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
